# rafft-rs

./: COPYING  Cargo.toml  README.md  Setup.md
.github/: build_env.yml
.github/workflows/: build-release.yml  run-checks.yml  setup-build-env.yml
src/: autocorrelation.rs  bindings.rs  encoding.rs  fast_folding.rs  folding_graph.rs  lib.rs  vienna.rs
