[package]
name = "rafft-rs"
authors = ["Vincent Messow <vincent.messow@mis.mpg.de>", "Vaitea Opuu <vaitea.opuu@mis.mpg.de>>", "Nono S. C. Merleau <cyrille.nono@mis.mpg.de>", "Matteo Smerlak <matteo.smerlak@mis.mpg.de>"]
repository = "https://github.com/strevol-mpi-mis/rafft-rs"
readme = "README.md"
license = "MIT"
description = "RNA structure and folding dynamics prediction using fast Fourier transform."
include = ["src/*", "Cargo.toml", "README.md", "COPYING"]
keywords = ["rna", "bioinformatics", "fft", "secondary-structure"]
categories = ["science"]
version = "0.2.0"
edition = "2021"

[dependencies]
itertools = "0.10"
librna-sys = { version = "0.1" }
#log = "0.4"
ndarray = { version = "0.15", features = ["approx"] } # approx feature needed for tests but that can't be enabled separately & automatically yet
petgraph = "0.6"
pyo3 = { version = "0.14", features = ["extension-module", "abi3"], optional = true }
rand = "0.8"
realfft = "2.0"
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
approx = "0.4"

[features]
bindings = ["pyo3"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

# For PyO3 bindings
[lib]
name = "rafft"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rufft"
